--- a/unity-renderer/Assets/DCLServices/EmotesService/EmotesService.asmdef
+++ b/unity-renderer/Assets/DCLServices/EmotesService/EmotesService.asmdef
@@ -12,7 +12,10 @@
         "GUID:cc6bfabbfe87b7949aa248893f89ce37",
         "GUID:8af21c3a612af2645a9953d4b9b3f6d5",
         "GUID:49176a91bbf7f8a4aaf35f6df0643d1a",
-        "GUID:2d39cc535b437e749965d4a8258f0c13"
+        "GUID:2d39cc535b437e749965d4a8258f0c13",
+        "GUID:b24824f3bc2a60641a01e2083614f802",
+        "GUID:6e6a87f97192ec947993f360104e75b7",
+        "GUID:a3ceb534947fac14da25035bc5c24788"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
